changed histogram function to be single line

--- a/index.ipynb
+++ b/index.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -3076,7 +3076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -3104,10 +3104,7 @@
     "macbeth_list = p.split(' ')\n",
     "macbeth_dict = {}\n",
     "for word in macbeth_list:\n",
-    "    if word not in macbeth_dict:\n",
-    "        macbeth_dict[word] = 1\n",
-    "    else:\n",
-    "        macbeth_dict[word] += 1\n",
+    "    macbeth_dict[word] = macbeth_dict.get(word, 0) + 1\n",
     "del macbeth_dict['']\n",
     "sorted_macbeth = sorted(macbeth_dict.items(), key=lambda kv: kv[1], reverse=True)\n",
     "first_25 = sorted_macbeth[:25]\n",
